css/common/footer.css
footer{
    height: fit-content;
    width: calc(100% - 200px);
    padding: 50px 100px;
    max-width: 1080px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    background-color: var(--main-white);
    gap: 50px;
}

.footer-container{
    height: fit-content;
    width: 100%;
    display: flex;
    justify-content: flex-start;
}

.footer-text{
    height: fit-content;
    width: 100%;
    min-width: 511px;
    display: flex;
    flex-direction: column;
}

.footer-text > p:nth-child(1){
    margin-top: 1px;
    color: #8643DC;
    letter-spacing: 1px;
}

.footer-text > p:nth-child(3){
    color: var(--main-black);
    max-width: 511px;
    letter-spacing: 0.25px;
    line-height: 52px;
}

.footer-contact-gmail{
    height: fit-content;
    text-align: center;
    margin-top: 54px;
}

.footer-contact-gmail > p:first-child{
    color: #8643DC;
}

.footer-field{
    position: relative;
    height: 355px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer-field > div{
    position: relative;
    width: 100%;
    height: 45px;
}

.footer-field > div:nth-child(2){
    position: relative;
    width: 100%;
    height: 45px;
    margin: 45px 0;
}

.text-field__input{
    padding: 0 0 10px 0;
    border: 0;
    outline: 0;
    border-radius: 0;
    border-bottom: 1px solid #DAD2E3;
    appearance: none;
    width: 100%;
    transition: border-color 1s ease-out;
    color: var(--main-black);
}

.text-field__input:focus{
    border-color: var(--main-black);
}

.footer-field__placeholder{
    width: 100%;
    height: fit-content;
    background: none;
    border-radius: 0;
    display: block;
    position: absolute;
    left: 0;
    top: 25px;
    pointer-events: none;
    transition: all 0.5s;
    padding-bottom: 21px;
    color: #A8A0B0;
}

.text-field__input:focus + .footer-field__placeholder{
    top: -10px;
    transform: scale(0.5), translateX(0);
}

.footer-lower-content{
    margin: 30px 0 40px 0;
    height: 60px;
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.footer-button{
    width: 200px;
    height: 60px;
    background-color: #8643DC;
    border-radius: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.footer-lower-element{
    height: 30px;
    width: 64px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.footer-link{
    height: 130px;
    width: 310px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.footer-link > p:first-child{
    color: var(--main-black);
    line-height: 48px;
    letter-spacing: 0.8px;
}

.footer-link-items{
    height: 50px;
    width: 230px;
    display: flex;
    justify-content: center;
    gap:32px;
}

.footer-link-item{
    position: relative;
    height: 50px;
    width: 50px;
}

.footer-link-item a:nth-child(2){
    position: absolute;
    margin: 0;
    padding: 0;
}

.footer-link-item:nth-child(1) a:nth-child(2){
    height: 30px;
    width: 30px;
    top: 10px;
    left: 10px
}

.footer-link-item:nth-child(2) a:nth-child(2), .footer-link-item:nth-child(3) a:nth-child(2){
    height: 25px;
    width: 25px;
    top: 12px;
    left: 12px
}

@media(max-width: 1279px){
    .footer-text > p:nth-child(1){
        margin-top: 4px;
    }
}
@media(max-width: 1279px){
    .footer-text > p:nth-child(1){
        margin-top: 4px;
    }
}

@media(max-width: 1059px){
    .footer-contact-gmail{
        display: none;
    }
}


@media(max-width: 767px){
    footer{
        width: calc(100% - 60px);
        padding: 50px 30px;
    }

    .footer-text{
        min-width: 0;
    }

    .footer-lower-element{
        width: 50px;
    }
}

